--- a/martus-client/source/org/martus/client/swingui/jfx/setupwizard/step2/SetupStorageServer.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/setupwizard/step2/SetupStorageServer.fxml
@@ -1,53 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import org.martus.client.swingui.jfx.setupwizard.step1.*?>
 
 <AnchorPane id="MainAnchorPane" maxHeight="-Infinity" maxWidth="660" minHeight="-Infinity" minWidth="-Infinity" prefWidth="660" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-  <children>
-  
-	<TitledBorder title="%ServerSetupBorderTitle" >       
-	<BorderPane>
-		<top>
-			<GridPane vgap="5.0">
-			 	<rowConstraints>
-				  	<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				   	<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-			  	</rowConstraints>
-				
-				<children>
-					<fx:define><ToggleGroup fx:id="serverConnectionChoiceToggleGroup"/></fx:define>
-					<Label styleClass="content-description-font" text="%UserDefaultServerOrYOurOwnTip" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
-					<ToggleButton fx:id="defaultServerButton" toggleGroup="$serverConnectionChoiceToggleGroup" mnemonicParsing="false" onAction="#useDefaultServer" styleClass="use-default-server-button" text="%UseDefaultServer" GridPane.columnIndex="1" GridPane.rowIndex="2" >
-					<styleClass>
-                        	<String fx:value="button_not_main_action" />
-                        	<String fx:value="button-MinPadding" />
-                     	</styleClass>
-                     </ToggleButton>
-					<ToggleButton fx:id="advancedServerSettingsButton" toggleGroup="$serverConnectionChoiceToggleGroup" mnemonicParsing="false" onAction="#advancedServerSettings" text="%UsePrivateServer" styleClass="use-private-server-button" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-				</children>
-			</GridPane>
-		</top>
-		<center>
-		<Label text="" />
-		</center>
-		<bottom>
-			<GridPane  vgap="5.0" fx:id="advancedServerConnectionFields" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
-		  		<columnConstraints>
-				    <ColumnConstraints maxWidth="515.0" minWidth="155.0" prefWidth="515.0" />
-		  		</columnConstraints>
-				  <children>				    
-				    <TextField fx:id="ipAddressField" promptText="%ServerNameEntryInformation" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-				    <TextField fx:id="publicCodeField" promptText="%ServerPublicCodeEntryInformation" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-				    <TextField fx:id="magicWordField" prefWidth="262.0" promptText="%ServerMagicWordEntryInformation" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-				  </children>
-			</GridPane>
-		</bottom>
-		
-	</BorderPane>	
-	</TitledBorder>   
-	
-  </children>
+    <children>
+        <TitledBorder title="%ServerSetupBorderTitle" >
+            <BorderPane>
+                <top>
+                    <GridPane vgap="5.0">
+                        <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        </rowConstraints>
+
+                        <children>
+                            <fx:define><ToggleGroup fx:id="serverConnectionChoiceToggleGroup"/></fx:define>
+                            <Label styleClass="content-description-font" text="%UserDefaultServerOrYOurOwnTip" GridPane.rowIndex="1" GridPane.columnIndex="1" GridPane.columnSpan="2" />
+                            <HBox GridPane.columnIndex="1" GridPane.rowIndex="2" alignment="CENTER_LEFT">
+                                <padding>
+                                    <Insets right="30.0" />
+                                </padding>
+                                <children>
+                                    <RadioButton fx:id="defaultServerButton" toggleGroup="$serverConnectionChoiceToggleGroup" mnemonicParsing="false" onAction="#useDefaultServer" />
+                                    <Button onAction="#useDefaultServer" styleClass="use-default-server-button" text="%UseDefaultServer" />
+                                </children>
+                            </HBox>
+                            <HBox GridPane.columnIndex="2" GridPane.rowIndex="2" alignment="CENTER_LEFT">
+                                <RadioButton fx:id="advancedServerSettingsButton" toggleGroup="$serverConnectionChoiceToggleGroup" mnemonicParsing="false" onAction="#advancedServerSettings" />
+                                <Button onAction="#advancedServerSettings" text="%UsePrivateServer" styleClass="use-private-server-button" />
+                            </HBox>
+                        </children>
+                    </GridPane>
+                </top>
+                <center>
+                    <Label text="" />
+                </center>
+                <bottom>
+                    <GridPane vgap="5.0" fx:id="advancedServerConnectionFields" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+                        <columnConstraints>
+                            <ColumnConstraints maxWidth="515.0" minWidth="155.0" prefWidth="515.0" />
+                        </columnConstraints>
+                        <children>
+                            <TextField fx:id="ipAddressField" promptText="%ServerNameEntryInformation" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                            <TextField fx:id="publicCodeField" promptText="%ServerPublicCodeEntryInformation" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                            <TextField fx:id="magicWordField" prefWidth="262.0" promptText="%ServerMagicWordEntryInformation" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                        </children>
+                    </GridPane>
+                </bottom>
+
+            </BorderPane>
+        </TitledBorder>
+
+    </children>
 </AnchorPane>
