--- a/martus-client/source/org/martus/client/swingui/jfx/css/SetupNewAccountWizard.css
+++ b/martus-client/source/org/martus/client/swingui/jfx/css/SetupNewAccountWizard.css
@@ -268,7 +268,8 @@
 .content-description-font {
 	-fx-text-fill: #606060;
 	-fx-alignment: center-left;
-	-fx-font-size: 25px;
+	-fx-font-size: 24px;
+	-fx-padding: 5 0 15 0;
 }
 
 #contacts-table {
@@ -345,7 +346,6 @@
 }
 
 .bordered-titled-border {
-  -fx-content-display: left;
   -fx-border-radius: 20 20 20 20;
   -fx-padding: 10 30 10 30;
   -fx-border-color: #cecece;
