--- a/martus-client/source/org/martus/client/swingui/jfx/landing/LandingShell.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/landing/LandingShell.fxml
@@ -170,14 +170,15 @@
                                         </Button>
                                     </children>
                                 </HBox>
-                                <HBox alignment="CENTER_RIGHT" GridPane.columnIndex="3">
+                                <VBox alignment="CENTER_RIGHT" GridPane.columnIndex="3">
                                     <padding>
-                                        <Insets right="10.0" />
+                                        <Insets right="10.0" top="15.0" />
                                     </padding>
                                     <children>
                                         <TextField fx:id="searchText" visible="%isFullDesktopFlavor" maxWidth="500.0" minWidth="150.0" style="-fx-background-radius: 0px;" />
+                                        <Hyperlink onAction="#onAdvanceSearch" text="%Advanced" styleClass="searchLink" />
                                     </children>
-                                </HBox>
+                                </VBox>
                             </children>
                             <rowConstraints>
                                 <RowConstraints />
