--- a/martus-client/source/org/martus/client/swingui/jfx/css/Landing.css
+++ b/martus-client/source/org/martus/client/swingui/jfx/css/Landing.css
@@ -1,6 +1,6 @@
 .menu-bar
 {
-	-fx-background-color: #36536C;
+	-fx-background-color: #3B92E4;
 }
 
 .menu-bar .label
@@ -17,8 +17,7 @@
 
 .menu-item {
     -fx-text-fill: #f7f7f7;
-	-fx-background-color: #36536C;
-
+    -fx-background-color: #3B92E4;
 }
 
 .menu-item:focused {
@@ -31,7 +30,7 @@
 
 .context-menu {
     -fx-skin: "com.sun.javafx.scene.control.skin.ContextMenuSkin";
-    -fx-background-color: black;
+    -fx-background-color: #3B92E4;
     -fx-background-insets: 0, 1, 2;
     -fx-background-radius: 0 6 6 6, 0 5 5 5, 0 4 4 4;
     -fx-padding: 0.333333em 0.083333em 0.666667em 0.083333em; /* 4 1 8 1 */
