MARTUSDEV-1835: Change folder menu size and background

--- a/martus-client/source/org/martus/client/swingui/jfx/css/Martus.css
+++ b/martus-client/source/org/martus/client/swingui/jfx/css/Martus.css
@@ -224,4 +224,9 @@
 	-fx-background-color: #77bad0;
 }
 
-
+.casesMenu {
+    -fx-text-fill: Black;
+    -fx-font-size: 15px;
+    -fx-font-weight: bold;
+    -fx-background-color: #e6e6e6;
+}
