--- a/martus-client/source/org/martus/client/swingui/jfx/landing/cases/CaseManagement.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/landing/cases/CaseManagement.fxml
@@ -9,94 +9,92 @@
 <?import javafx.scene.text.*?>
 
 <VBox maxWidth="300.0" minWidth="270.0" prefWidth="300.0" styleClass="cases" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-	<children>
-		<BorderPane>
-			<left>
-				<HBox>
-					<Label text="%Menu.folders" textFill="WHITE">
-						<font>
-							<Font size="18.0" />
-						</font>
-						<styleClass>
-							<String fx:value="caseLabel" />
-							<String fx:value="headingLevel1" />
-						</styleClass>
-					</Label>
-				</HBox>
-			</left>	
-	         <right>
-	      		<HBox BorderPane.alignment="CENTER">
-	      		   <children>
-	      		       <Button mnemonicParsing="false" onMouseClicked="#onFolderNewClicked" prefHeight="40.0" prefWidth="40.0">
-	                     <tooltip>
-	                        <Tooltip anchorLocation="WINDOW_TOP_LEFT" text="%Tooltip.AddCase" />
-	                     </tooltip>
-	                     <graphic>
-	                        <ImageView pickOnBounds="true" preserveRatio="true">
-	                           <image>
-	                              <Image url="@../../images/add.png" />
-	                           </image>
-	                        </ImageView>
-	                     </graphic>
-	                     <styleClass>
-	                        <String fx:value="button-minpadding" />
-	                        <String fx:value="button-transparentWithHover" />
-	                     </styleClass>
-	                  </Button>
-	      		       <Button fx:id="deleteFolderButton" mnemonicParsing="false" onMouseClicked="#onFolderDeleteClicked" prefHeight="40.0" prefWidth="40.0">
-	                     <tooltip>
-	                        <Tooltip anchorLocation="WINDOW_TOP_LEFT" text="%Tooltip.DeleteCase" />
-	                     </tooltip>
-	                     <graphic>
-	                        <ImageView pickOnBounds="true" preserveRatio="true">
-	                           <image>
-	                              <Image url="@../../images/remove.png" />
-	                           </image>
-	                        </ImageView>
-	                     </graphic>
-	                     <styleClass>
-	                        <String fx:value="button-minpadding" />
-	                        <String fx:value="button-transparentWithHover" />
-	                     </styleClass>
-	                  </Button>
-	      		   </children>
-	      		</HBox>
-	         </right>
-	
-	      </BorderPane>
-	      <ListView fx:id="casesListViewAll" onMouseClicked="#onCaseListMouseClicked" prefWidth="300.0" />
-	      <BorderPane>
-	         <left>
-	      		<HBox BorderPane.alignment="CENTER">
-	      		   <children>
-	            		<Button fx:id="showTrashFolder" graphicTextGap="2.0" mnemonicParsing="false" onAction="#onShowTrash" prefHeight="40.0" prefWidth="40.0">
-	            			<font>
-	            				<Font name="Helvetica" size="12.0" />
-	            			</font>
-		                     <graphic>
-		                        <ImageView fitHeight="35.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true" styleClass="button-minpadding">
-		                           <image>
-		                              <Image url="@../../images/trash.png" />
-		                           </image>
-		                        </ImageView>
-		                     </graphic>
-		                     <tooltip>
-		                        <Tooltip anchorLocation="WINDOW_TOP_RIGHT" text="%Tooltip.ShowTrash" />
-		                     </tooltip>
-		                     <styleClass>
-		                        <String fx:value="button-minpadding" />
-		                        <String fx:value="button-transparentWithHover" />
-		                     </styleClass>
-	            		</Button>
-	      		   </children>
-	      		</HBox>
-	         </left>
-	         <right>
-	            <HBox BorderPane.alignment="CENTER">
-	               <children>
-	               </children>
-	            </HBox>
-	         </right>
-	      </BorderPane>
-	</children>
+    <children>
+        <BorderPane styleClass="casesMenu">
+            <VBox.margin>
+                <Insets top="2" bottom="1" />
+            </VBox.margin>
+            <left>
+                <HBox alignment="CENTER_LEFT">
+                    <Label text="%Menu.folders">
+                        <padding>
+                            <Insets left="5" />
+                        </padding>
+                    </Label>
+                </HBox>
+            </left>
+            <right>
+                <HBox BorderPane.alignment="CENTER">
+                    <children>
+                        <Button mnemonicParsing="false" onMouseClicked="#onFolderNewClicked">
+                            <tooltip>
+                                <Tooltip anchorLocation="WINDOW_TOP_LEFT" text="%Tooltip.AddCase" />
+                            </tooltip>
+                            <graphic>
+                                <ImageView pickOnBounds="true" preserveRatio="true" fitHeight="15">
+                                    <image>
+                                        <Image url="@../../images/add.png" />
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                            <styleClass>
+                                <String fx:value="button-minpadding" />
+                                <String fx:value="button-transparentWithHover" />
+                            </styleClass>
+                        </Button>
+                        <Button fx:id="deleteFolderButton" mnemonicParsing="false" onMouseClicked="#onFolderDeleteClicked">
+                            <tooltip>
+                                <Tooltip anchorLocation="WINDOW_TOP_LEFT" text="%Tooltip.DeleteCase" />
+                            </tooltip>
+                            <graphic>
+                                <ImageView pickOnBounds="true" preserveRatio="true" fitHeight="15">
+                                    <image>
+                                        <Image url="@../../images/remove.png" />
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                            <styleClass>
+                                <String fx:value="button-minpadding" />
+                                <String fx:value="button-transparentWithHover" />
+                            </styleClass>
+                        </Button>
+                    </children>
+                </HBox>
+            </right>
+        </BorderPane>
+        <ListView fx:id="casesListViewAll" onMouseClicked="#onCaseListMouseClicked" prefWidth="300.0" />
+        <BorderPane>
+            <left>
+                <HBox BorderPane.alignment="CENTER">
+                    <children>
+                        <Button fx:id="showTrashFolder" graphicTextGap="2.0" mnemonicParsing="false" onAction="#onShowTrash" prefHeight="40.0" prefWidth="40.0">
+                            <font>
+                                <Font name="Helvetica" size="12.0" />
+                            </font>
+                            <graphic>
+                                <ImageView fitHeight="35.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true" styleClass="button-minpadding">
+                                    <image>
+                                        <Image url="@../../images/trash.png" />
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                            <tooltip>
+                                <Tooltip anchorLocation="WINDOW_TOP_RIGHT" text="%Tooltip.ShowTrash" />
+                            </tooltip>
+                            <styleClass>
+                                <String fx:value="button-minpadding" />
+                                <String fx:value="button-transparentWithHover" />
+                            </styleClass>
+                        </Button>
+                    </children>
+                </HBox>
+            </left>
+            <right>
+                <HBox BorderPane.alignment="CENTER">
+                    <children>
+                    </children>
+                </HBox>
+            </right>
+        </BorderPane>
+    </children>
 </VBox>
